Prep for 0.1 release